--- a/index.html
+++ b/index.html
@@ -9,24 +9,29 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-color: #f8f9fa;">
     <div class="container">
-        <h1 class="text-center">Job Portal Links</h1>
+        <h1 class="text-center" style="color: #212529;">Job Portal Links</h1>
         <div class="row">
             <div class="col-md-6">
-                <h3>Portals</h3>
+                <h3>Job offers</h3>
                 <ul>
                     <li><a href="https://www.indeed.com/" target="_blank">Indeed</a></li>
                     <li><a href="https://www.glassdoor.com/" target="_blank">Glassdoor</a></li>
                     <li><a href="https://www.linkedin.com/jobs/" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://www.nofluffjobs.com/jobs/" target="_blank">NoFluffJobs</a></li>
+                    <li><a href="https://www.theprotocol.it/" target="_blank">theprotocol.it</a></li>
+                    <li><a href="https://justjoin.it/" target="_blank">justjoin.it</a></li>
+                    <li><a href="https://bulldogjob.pl/" target="_blank">BullogJob</a></li>
                 </ul>
             </div>
             <div class="col-md-6">
                 <h3>Developer Resources</h3>
                 <ul>
+                    <li><a href="https://stackoverflow.com/" target="_blank">StackOverflow</a></li>
                     <li><a href="https://github.com/" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></li>
-                    <li><a href="https://www.interviewcake.com/" target="_blank">Interview Cake</a></li>
+                    <li><a href="https://interviewme.pl/" target="_blank">InterviewMe - kreator CV</a></li>
                 </ul>
             </div>
         </div>
