--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body style="background-color: #f8f9fa;">
     <div class="container">
         <h1 class="text-center" style="color: #212529;">Job Portal Links</h1>
-        <div class="row">
             <div class="col-md-6">
                 <h3>Job offers</h3>
                 <ul>
@@ -28,9 +27,9 @@
             <div class="col-md-6">
                 <h3>Developer Resources</h3>
                 <ul>
+                    <li><a href="https://www.linkedin.com/in/grzegorz-pisarczyk/" target="_blank">LinkedIn</a></li>
                     <li><a href="https://stackoverflow.com/" target="_blank">StackOverflow</a></li>
                     <li><a href="https://github.com/" target="_blank">GitHub</a></li>
-                    <li><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></li>
                     <li><a href="https://interviewme.pl/" target="_blank">InterviewMe - kreator CV</a></li>
                 </ul>
             </div>
